@@ -1,73 +1,113 @@
 package UvA.Gamma;
 
+import UvA.Gamma.AST.*;
+import UvA.Gamma.AST.Values.Boolean;
 import UvA.Gamma.Antlr.QL.QLBaseVisitor;
 import UvA.Gamma.Antlr.QL.QLParser;
-import UvA.Gamma.Models.QLForm;
-import UvA.Gamma.Models.Input;
-import org.antlr.v4.runtime.tree.ParseTree;
 
-import java.util.HashMap;
-import java.util.Map;
 
 /**
  * Created by Tjarco on 08-02-17.
  */
 
-public class QLVisitor extends QLBaseVisitor<Object> {
-    Map<String, String> ids;
-    private QLForm form;
+public class QLVisitor extends QLBaseVisitor<ASTNode> {
+    private Form form;
 
     QLVisitor() {
-        ids = new HashMap<>();
-        form = new QLForm("");
+        form = new Form();
     }
 
-    public QLForm getForm(){
+    public Form getForm() {
         return this.form;
     }
 
     @Override
-    public Object visit(ParseTree tree) {
-        return super.visit(tree);
-    }
-
-    @Override
-    public QLForm visitForm(QLParser.FormContext ctx) {
-        for (QLParser.FormItemContext formItemContext: ctx.formItem()){
-            visit(formItemContext);
+    public Form visitForm(QLParser.FormContext ctx) {
+        for (QLParser.FormItemContext formItemContext : ctx.formItem()) {
+            form.addFormItem((FormItem) visit(formItemContext));
         }
         return form;
     }
 
     @Override
-    public Input visitInput(QLParser.InputContext ctx) {
-        String id = ctx.ID().getText();
-        String question = ctx.QUESTION().getText();
-        String type = (String) visit(ctx.type());
-        Input input = new Input(id, question, type);
-        form.addInput(input);
-        return input;
+    public Question visitQuestion(QLParser.QuestionContext ctx) {
+        Question question = new Question();
+        question.setQuestion(ctx.STRING_LITERAL().getText());
+        question.setId(ctx.ID().getText());
+        question.setType(ctx.type().getText());
+        return question;
     }
 
     @Override
-    public Object visitType(QLParser.TypeContext ctx) {
-        if (ctx.intExpr() != null) {
-            return String.valueOf(visit(ctx.intExpr()));
+    public Computed visitComputed(QLParser.ComputedContext ctx) {
+        Computed computed = new Computed();
+        computed.setLabel(ctx.STRING_LITERAL().getText());
+        computed.setId(ctx.ID().getText());
+        computed.setType(ctx.type().getText());
+        computed.setExpression((Expression) visit(ctx.expression()));
+        return computed;
+    }
+
+    @Override
+    public Condition visitCondition(QLParser.ConditionContext ctx) {
+        Condition condition = new Condition();
+        condition.setExpression(visit(ctx.boolExpr()).toString());
+        return condition;
+    }
+
+
+//    @Override
+//    public Expression visitExpression(QLParser.ExpressionContext ctx) {
+//        super.visitExpression(ctx);
+//        return new NumberExpression(ctx.getText());
+//    }
+
+    @Override
+    public NumberExpression visitNumExpr(QLParser.NumExprContext ctx) {
+        return new NumberExpression(ctx.getText());
+    }
+
+    //
+//    @Override
+//    public Number visitAdd(QLParser.AddContext ctx) {
+//        Number left = (Number) visit(ctx.numExpr(0));
+//        Number right = (Number) visit(ctx.numExpr(1));
+//        return ctx.op.getText().equals("+") ? left.add(right) : left.subtract(right);
+//    }
+//
+//    //Expressions
+//    @Override
+//    public Number visitDiv(QLParser.DivContext ctx) {
+//        Number left = (Number) visit(ctx.numExpr(0));
+//        Number right = (Number) visit(ctx.numExpr(1));
+//        return ctx.op.getText().equals("*") ? left.multiply(right) : left.divide(right);
+//    }
+//
+//    @Override
+//    public Number visitNum(QLParser.NumContext ctx) {
+//        return new Number(ctx.getText());
+//    }
+
+    @Override
+    public Boolean visitAndor(QLParser.AndorContext ctx) {
+        Boolean left = (Boolean) visit(ctx.boolExpr(0));
+        Boolean right = (Boolean) visit(ctx.boolExpr(1));
+        switch (ctx.op.getText()) {
+            case "&&":
+                return new Boolean(left.and(right));
+            case "||":
+                return new Boolean(left.or(right));
+            case "==":
+                return new Boolean(left.equals(right));
+            case "!=":
+                return new Boolean(!left.equals(right));
+            default:
+                return left;
         }
-        return ctx.getText();
-    }
-
-    //Expressions
-
-    @Override
-    public Object visitAdd(QLParser.AddContext ctx) {
-        double left = (double)visit(ctx.intExpr(0));
-        double right  = (double)visit(ctx.intExpr(1));
-        return ctx.op.getType() == QLParser.ADD ? left + right : left - right;
     }
 
     @Override
-    public Object visitInt(QLParser.IntContext ctx) {
-        return Double.valueOf(ctx.NUMBER().getText());
+    public Boolean visitBool(QLParser.BoolContext ctx) {
+        return new Boolean(ctx.getText());
     }
 }
